view design mkt

--- a/about.html
+++ b/about.html
@@ -133,142 +133,266 @@
 <section class="page-title bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/14.png);">
   <div class="container">
     <div class="row">
-     <div class="col-lg-12">
+      <div class="col-lg-12">
       <div class="page-title-name">
-          <h1 class="lcd-title"> LA COMPAÑíA <br> DIGITAL</h1>
-          <p class="lcd-p">Estamos para ayudarte a mejorar tu vida con tecnología</p>
+          <h1 class="lcd-title">LA COMPAÑÍA DIGITAL</h1>
+          <p>Estamos para ayudarte a mejorar tu vida con tecnología</p>
         </div>
+          <ul class="page-breadcrumb">
+            <li><a href="#"><i class="fa fa-home"></i> Inicio</a> <i class="fa fa-angle-double-right"></i></li>
+            <li><a href="#">Nosotros</a> <i class="fa fa-angle-double-right"></i></li>
+       </ul>
      </div>
+   </div>
   </div>
+</section>
+
+<section class="our-activities gray-bg page-section-ptb">
+  <div class="container">
+     <div class="row">
+      <div class="col-lg-7">
+         <div class="section-title">
+            <h2 class="title-effect">Valores</h2>
+            <p>Brindamos compañía (en cada proceso de tu desarrollo y en cada etapa a superar)</p>
+          </div>
+          <p>El <strong>persistir con enfoque</strong> nos permite encontrar la simpleza de las cosas. <br> Ponemos <strong>pasión en cada tarea</strong>. Avanzamos con <strong>seguridad y confianza</strong>. <br> <strong>Respeto</strong> por los demás. <strong>Conciencia</strong> ambiental y social, <strong>somos responsables</strong>. <strong>Colaboramos</strong> de manera creativa. <strong>Somos lideres</strong>, marcamos el paso. <br> <strong>Somos empáticos</strong> e inclusivos. <br>
+                Inspiramos el uso de tecnologías compartiendo las mejores noticias, opiniones y consejos. </p></p>
+       </div>
+      <div class="col-lg-5">
+        <div class="accordion shadow">
+            <div class="acd-group">
+                <a href="#" class="acd-heading">Propósito</a>
+                <div class="acd-des">Impulsamos el desarrollo de las personas brindando información útil, de manera creativa, sobre los medios digitales y su uso.</div>
+            </div>
+            <div class="acd-group acd-active">
+                <a href="#" class="acd-heading acd-active">Visión</a>
+                <div class="acd-des"> Brindar información actualizada, organizada, interconectada y de libre acceso con el fin de crear una “biblioteca virtual” que conecta personas que compartan intereses.</div>
+            </div>
+            <div class="acd-group">
+                <a href="#" class="acd-heading">Misión</a>
+                <div class="acd-des">Inspirar a las personas a lograr grandes cosas utilizando la tecnología, mejorando su rendimiento y potenciando sus capacidades.</div>
+            </div>
+            
+        </div>
+      </div>
+    </div>
  </div>
 </section>
 
-<section class="page-section-ptb">
-  <div class="container">
-     <div class="row">
-      <div class="col-lg-6 sm-mt-30">
-        <div class="section-title mb-20">
-            <h6>Quienes somos y qué hacemos</h6>
-            <h2>Sobre nosotros </h2>
-            <p>Nos preocupamos por nuestras visitas y el contenido que les compartimos filtrando la mejor información posible.</p>
-          </div>
-          <p>Brindamos información actualizada, organizada y de libre acceso. <br> Todo sobre los medios digitales y su uso.</p>
-          <a class="button mt-20" href="#"> Leer más</a>
-      </div>
-      <div class="col-lg-6">
-         <div class="js-video [youtube, widescreen]">
-           <iframe src="https://www.youtube.com/embed/ZOoVOfieAF8" allowfullscreen></iframe>
-        </div>
-      </div>
+<section class="business-big-testimonial white-bg page-section-ptb">
+  <div class="container-fluid">
+     <div class="row justify-content-center">
+       <div class="col-lg-9 text-center">
+         <h3 class="mb-40">Conoce a nuestro equipo.</h3>
+       </div>
      </div>
-  </div>
-</section>
-
-<section class="theme-bg page-section-ptb" style="padding: 60px 0;">
-   <div class="container">
-       <div class="row">
-         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-              <h1 class="text-white">01<span class="text-black">.</span></h1>
-              <h3 class="text-black">Tenemos tecnología</h3>
-              <p class="text-gray">Realmente creemos en la tecnología como un medio para mejorar nuestras vidas en casi cualquier aspecto. </p>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-              <h1 class="text-white">02<span class="text-black">.</span></h1>
-              <h3 class="text-black">Estamos en compañía</h3>
-              <p class="text-gray">Conectados casi todo el tiempo no debemos olvidar elegir bien nuestra compañía por que siempre influye en nosotros.</p>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4">
-              <h1 class="text-white">03<span class="text-black">.</span></h1>
-              <h3 class="text-black">Mejoramos día a día</h3>
-              <p class="text-gray">Estamos siempre atentos a los comentarios, opiniones y sugerencias de nuestras visitas, nos impulsan cada día.</p>
-         </div>
-      </div>
-  </div>
-</section>
-
-<section class="gray-bg page-section-ptb">
-  <div class="container">
-     
-    <div class="row">
-      <div class="col-lg-12 col-md-12">
-         <div class="section-title text-center">
-            <span class="h4 text-gray">Conoce a nuestros integrantes</span>
-            <h1>Nuestro equipo</h1>
+      <div class="row justify-content-center">
+       <div class="col-lg-8 text-center">
+          <div class="owl-carousel" data-nav-dots="true" data-items="1" data-lg-items="1" data-md-items="1" data-sm-items="1" data-xs-items="1">
+              <div class="item">
+                <div class="testimonial clean">
+                  <div class="testimonial-info"> Capacitado y enfocado en sus tareas, etc!</div>
+               </div>
+              </div>
+          </div>
+        </div>
+       </div>
+     <div class="row mt-80 justify-content-center">
+        <div class="col-lg-2 col-md-2 col-sm-6 xs-mb-30">
+           <div class="team team-round">
+              <div class="team-photo">
+                <img class="img-fluid mx-auto" src="images/team/01.jpg" alt="">
+              </div>
+              <div class="team-description">
+                <div class="team-info">
+                     <h6><a href="team-single.html">Jorge Colombres</a></h6>
+                     <span>CEO</span>
+                </div>
+               </div>
+           </div>
+          </div>
+          <div class="col-lg-2 col-md-2 col-sm-6 xs-mb-30">
+           <div class="team team-round">
+              <div class="team-photo">
+                <img class="img-fluid mx-auto" src="images/team/02.jpg" alt="">
+              </div>
+              <div class="team-description">
+                <div class="team-info">
+                     <h6><a href="team-single.html">Nicolas Ottaviani</a></h6>
+                     <span>Design</span>
+                </div>
+               </div>
+           </div>
+          </div>
+          <div class="col-lg-2 col-md-2 col-sm-6 xs-mb-30">
+           <div class="team team-round">
+              <div class="team-photo">
+                <img class="img-fluid mx-auto" src="images/team/06.jpg" alt="">
+              </div>
+              <div class="team-description">
+                <div class="team-info">
+                     <h6><a href="team-single.html">Tomás Guerineau</a></h6>
+                     <span>Community</span>
+                </div>
+               </div>
+           </div>
+          </div>
+          <div class="col-lg-2 col-md-2 col-sm-6 xs-mb-30">
+           <div class="team team-round">
+              <div class="team-photo">
+                <img class="img-fluid mx-auto" src="images/team/04.jpg" alt="">
+              </div>
+              <div class="team-description">
+                <div class="team-info">
+                     <h6><a href="team-single.html">Adrian</a></h6>
+                     <span>Graphic</span>
+                </div>
+               </div>
+           </div>
+          </div>
+          <div class="col-lg-2 col-md-2 col-sm-6 xs-mb-30">
+           <div class="team team-round">
+              <div class="team-photo">
+                <img class="img-fluid mx-auto" src="images/team/05.jpg" alt="">
+              </div>
+              <div class="team-description">
+                <div class="team-info">
+                     <h6><a href="team-single.html">Chueco</a></h6>
+                     <span>Designer</span>
+                </div>
+               </div>
+           </div>
           </div>
        </div>
-    </div>
-     <div class="row">
-        <div class="col-lg-3 col-sm-6 sm-mb-30">
-         <div class="team team-round full-border white-bg">
-            <div class="team-photo">
-              <img class="img-fluid mx-auto" src="images/team/01.jpg" alt="">
-            </div>
-            <div class="team-description">
-              <div class="team-info">
-                   <h5><a href="team-single.html"> Coke Colombres</a></h5>
-                   <span>CEO</span>
-              </div>
-              <div class="team-contact">
-                <span class="call"> +(704) 279-1249</span>
-                <span class="email"> <a href="#"> <i class="fa fa-envelope-o"></i> </a> </span>
-              </div>
-             </div>
-         </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 sm-mb-30">
-         <div class="team team-round full-border white-bg">
-            <div class="team-photo">
-              <img class="img-fluid mx-auto" src="images/team/02.jpg" alt="">
-            </div>
-            <div class="team-description">
-              <div class="team-info">
-                   <h5><a href="team-single.html"> Nicolas Ottaviani</a></h5>
-                   <span>Design</span>
-              </div>
-              <div class="team-contact">
-                <span class="call"> +(704) 279-1249</span>
-                <span class="email"> <a href="#"> <i class="fa fa-envelope-o"></i> </a> </span>
-              </div>
-             </div>
-         </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 xs-mb-30">
-         <div class="team team-round full-border white-bg">
-            <div class="team-photo">
-              <img class="img-fluid mx-auto" src="images/team/06.jpg" alt="">
-            </div>
-            <div class="team-description">
-              <div class="team-info">
-                   <h5><a href="team-single.html"> Chueco Darterio</a></h5>
-                   <span>Community</span>
-              </div>
-              <div class="team-contact">
-                <span class="call"> +(704) 279-1249</span>
-                <span class="email"> <a href="#"> <i class="fa fa-envelope-o"></i> </a> </span>
-              </div>
-             </div>
-         </div>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-         <div class="team team-round full-border white-bg">
-            <div class="team-photo">
-              <img class="img-fluid mx-auto" src="images/team/04.jpg" alt="">
-            </div>
-            <div class="team-description">
-              <div class="team-info">
-                   <h5><a href="team-single.html"> Adrian Tula</a></h5>
-                   <span>Graphic Designer</span>
-              </div>
-              <div class="team-contact">
-                <span class="call"> +(704) 279-1249</span>
-                <span class="email"> <a href="#"> <i class="fa fa-envelope-o"></i> </a> </span>
-              </div>
-             </div>
-         </div>
-        </div>
-     </div>
   </div>
 </section>
+
+
+<section class="our-clients theme-bg text-white page-section-ptb">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+      <div class="owl-carousel" data-items="5" data-sm-items="4" data-xs-items="3" data-xx-items="2">
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/06.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/07.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/08.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/09.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/10.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/06.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/08.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/09.png" alt="">
+         </div>
+         </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<footer class="footer page-section-pt">
+  <div class="container">
+      <div class="footer-contact white-bg">
+              <div class="row">
+                  <div class="col-lg-4 col-md-4 bottom-m3">
+                      <div class="contact-box">
+                          <div class="contact-icon">
+                              <i class="ti-direction-alt"></i>
+                          </div>
+                          <div class="contact-info">
+                              <div class="text-center">
+                                  <h5 class="mt-10 mb-10">17504 Carlton Cuevas Rd, </h5>
+                                  <span>Gulfport, MS, 39503</span>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-4 col-md-4 bottom-m3">
+                      <div class="contact-box">
+                          <div class="contact-icon">
+                              <i class="ti-headphone-alt"></i>
+                          </div>
+                          <div class="contact-info">
+                              <div class="text-center">
+                                  <h5 class="mt-10 mb-10">+(704) 279-1249</h5>
+                                  <span>Mon-Fri 8:30am-6:30pm</span>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-4 col-md-4">
+                      <div class="contact-box">
+                          <div class="contact-icon">
+                              <i class="ti-email"></i>
+                          </div>
+                          <div class="contact-info">
+                              <div class="text-center">
+                                  <h5 class="mt-10 mb-10"> letstalk@webster.com</h5>
+                                  <span>24 X 7 online support</span>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+  </div>
+</footer>
+
+<section class="mb-50">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <div class="row mt-70">
+          <div class="col-lg-12 col-md-12">
+            <h3 class="mb-20"> Fotos </h3>
+            <div class="owl-carousel" data-nav-dots="true" data-items="1" data-md-items="1" data-sm-items="1" data-xs-items="1" data-xx-items="1" data-space="20">
+              <div class="item">
+                <img class="img-fluid full-width" src="images/blog/04.jpg" alt="">
+              </div>
+              <div class="item">
+                <img class="img-fluid full-width" src="images/blog/05.jpg" alt="">
+              </div>
+              <div class="item">
+                <img class="img-fluid full-width" src="images/blog/06.jpg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+ <div class="parallax bg-overlay-black-70 page-section-ptb parallax" data-jarallax='{"type": "scroll-opacity"}' style="background-image: url(video/video.jpg);" data-jarallax-video="mp4:video/video.mp4,webm:video/video-webm,ogv:video/video.ogv">
+  <div class="container">
+    <div class="row pos-r mt-20">
+      <div class="col-md-12">
+        <div class="section-title text-center">
+          <h2 class="text-white">Impulsa tu negocio!</h2>
+       </div>
+        <div class="text-center">
+        <a target="blank" href="#" class="button button-border-white">
+          <span>Contactanos</span>
+          </a>
+       </div>
+     </div>
+
+    </div>
+   </div>
+</div>
 
 <!-- <section class="page-section-ptb">
   <div class="container">
@@ -537,7 +661,7 @@
 
 
 
-<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up"></i> <span>ARRIBA</span></a></div>
+<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up pt-10"></i></a></div>
 
 <!--=================================
  jquery -->
