--- a/service-marketing.html
+++ b/service-marketing.html
@@ -130,161 +130,206 @@
 <!--=================================
  rev-slider -->
 
-<section class="slider-parallax business-banner-06 bg-overlay-black-80 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/29.png);">
+<section class="slider-parallax business-banner-02 bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/3.png);">
   <div class="slider-content-middle">
    <div class="container">
      <div class="row">
-        <div class="col-12">
+        <div class="col-lg-6 align-self-center">
          <div class="slider-content">
-          <div class="row">
-            <div class="col-lg-10">
-                <h1 class="text-white text-uppercase">“Con información adecuada puedes anticiparte a los cambios”</h1>
-                <p class="text-white">La recopilación, análisis y segmentación de datos te permiten enfocarte en lo importante.</p>
-            </div>
+            <h5 class="text-white mb-15">Use a past defeat as a motivator</h5>
+            <h1 class="text-white mb-30">The first thing to remember about success is that.</h1>
+            <p class="text-white">There are basically six key areas to higher achievement. Some people will tell you there are four while others may tell you there are eight. One thing for certain though, is that irrespective of the number of steps the experts talk about, they all originate from the same roots.</p>
           </div>
+         </div>
+         <div class="col-lg-5 offset-1 align-self-center">
+           <img class="col-12" src="images/marketing/mkt.png">
          </div>
         </div>
      </div>
-   </div>
   </div>
 </section>
 
-<section id="raindrops" class="raindrops" style="height: 50px; margin-top: -3%;"></section>
 
-<section class="page-section">
+<section class="page-section bg-dark text-white">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12">
-         <div class="section-title text-center">
-            <h1>Impulsa tu negocio con presencia e identidad digital</h1>
+         <div class="section-title text-center mt-50">
+            <h2>Impulsa tu negocio con presencia e identidad digital</h2>
           </div>
+          <h6 class="col-10 offset-1 text-center text-white">There are basically six key areas to higher achievement. Some people will tell you there are four while others may tell you there are eight. One thing for certain though, is that irrespective of the number of steps the experts talk about, they all originate from the same roots</h6>
+       </div>
+       <div class="text-center col-12 mt-40 pb-50">
+          <a class="button button-border white" href="#">Ver más</a>
        </div>
     </div>
     
   </div>
 </section>
 
-
-<section class="page-section-pt bg-overlay-theme-900 parallax" style="background-image: url(images/bg/17.jpg);">
- <div class="container">
-    <div class="row justify-content-center">
-       <div class="col-md-9">
-        <div class="play-video-section text-center mtn-10" style="">
-           <div class="content">
-              <h4 class="text-dark mb-20">Estudiamos el contexto de tu marca para posicionarla en el mercado objetivo y detectar tendencias entre los consumidores</h4>
-              <p class="mb-50">Analizamos, generamos datos y estadísticas para enfocarnos en lo importante, su presencia y alcance en medios digitales. Diseñamos estrategias para atraer al público que buscas.</p>
-              <img class="img-fluid mx-auto" src="images/marketing/laptop.png" alt="">
-           </div>
-         </div>
-       </div>
-    </div>
- </div>
-</section>
-
-<section class="gray-bg page-section-ptb" style="padding: 60px 0;">
-   <div class="container">
-       <div class="row">
-        <div class="col-lg-12 col-md-12 mb-5">
-          <div class="section-title text-center">
-            <span class="h4 text-gray">Aprovechá la presencia web</span>
-            <h1 class="text-dark">Algunos de sus beneficios</h1>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-             <h1 class="text-black">01<span class="text-black">.</span></h1>
-             <h5 class="text-black">Aumentá el alcance de tu negocio apareciendo en búsquedas de google, facebook, instagram, twitter y cualquier otro medio digital.</h5>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-             <h1 class="text-black">02<span class="text-black">.</span></h1>
-             <h5 class="text-black">Cultivá la imagen de tu marca comunicando de manera directa y efectiva.</h5>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-             <h1 class="text-black">03<span class="text-black">.</span></h1>
-             <h5 class="text-black">Recibe feedback, consejos, opiniones, sugerencias, etc de tus clientes.</h5>
-        </div>
-      </div>
-  </div>
-</section>
-
 <section class="page-section-ptb">
   <div class="container">
-     <div class="row no-gutters">
-      <div class="col-lg-4 col-md-6">
-       <div class="feature-text left-icon">
-         <div class="position-relative clearfix">
-          <div class="feature-icon">
-            <span class="fa fa-bullhorn"></span>
-         </div>
-       </div>
-        <div class="feature-info">
-          <h5 class="text-back">Estrategias Eficientes </h5>
-          <p class="mb-0">Enfocados en tu público objetivo, nos concentramos en promocionar tu negocio y transmitir el valor de lo que ofrece.</p>
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <div class="section-title text-center">
+          <h6>Nuestros servicios </h6>
+          <h2 class="title-effect">Lo que hacemos de Marketing</h2>
+          <p>We'll do everything we can to make our next best project!</p>
         </div>
       </div>
-     </div>
-     <div class="col-lg-4 col-md-6">
-        <div class="feature-text left-icon">
-         <div class="position-relative clearfix">
-          <div class="feature-icon">
-            <span class="fa fa-bar-chart"></span>
-         </div>
-       </div>
-        <div class="feature-info">
-          <h5 class="text-back">Branding</h5>
-          <p class="mb-0">Cultivamos la identidad y presencia digital transmitiendo los valores de cada marca. </p>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 col-sm-6 mb-30 ">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+           <span class="ti-layers-alt theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-back">Many Style Available</h5>
+            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
+          </div>
         </div>
       </div>
-     </div>
-     <div class="col-lg-4 col-md-6">
-        <div class="feature-text left-icon">
-         <div class="position-relative clearfix">
-          <div class="feature-icon">
-            <span class="fa fa-file-code-o"></span>
-         </div>
-       </div>
-        <div class="feature-info">
-          <h5 class="text-back">Comunicación Efectiva</h5>
-          <p class="mb-0">Construimos el mensaje adecuado para que tu marca impacte en el público objetivo.</p>
+      <div class="col-lg-6 col-sm-6 mb-30 ">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+           <span class="ti-headphone theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-back">Fast Customer support</h5>
+            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
+          </div>
         </div>
       </div>
-     </div>
+      <div class="col-lg-6 col-sm-6 mb-30 ">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+           <span class="ti-layers-alt theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-back">Many Style Available</h5>
+            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-sm-6 mb-30 ">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+           <span class="ti-headphone theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-back">Fast Customer support</h5>
+            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
+          </div>
+        </div>
+      </div>  
+      <div class="col-lg-6 col-sm-6 xs-mb-30">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+            <span class="ti-desktop theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-back">Our company</h5>
+            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-sm-6">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+            <span class="ti-settings theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-back">Customizability</h5>
+            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
-<section class="service gray-bg page-section-ptb">
+<section class="gray-bg">
   <div class="container">
-    <!-- ============================================ -->
-   <div class="service-3">
+    <div class="row d-flex">
+      <div class="col-5">
+        <img class="col-12" src="images/marketing/mkt.png">
+      </div>
+      <div class="col-6">
+        <div class="slider-content pt-90">
+            <h5 class="text-dark mb-15">Use a past defeat as a motivator</h5>
+            <h1 class="text-dark mb-30">The first thing to remember about success is that.</h1>
+            <p class="text-dark">There are basically six key areas to higher achievement. Some people will tell you there are four while others may tell you there are eight. One thing for certain though, is that irrespective of the number of steps the experts talk about, they all originate from the same roots.</p>
+          </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class=" contact-2 clearfix o-hidden">
+  <div class="container d-flex">
+  <div class="col-12 col-md-4">
     <div class="row">
-       <div class="col-lg-6 col-md-6">
-        <div class="col-lg-12 col-md-12">
-          <div class="section-title text-right">
-            <span class="h4 text-gray">Aprovechá la presencia en las redes</span>
-            <h1 class="text-dark">Sobre el marketing</h1>
-          </div>
-        </div>
-          <div class="service-blog text-right">
-              <ul class="list list-unstyled">
-                <li>Inbound Marketing </li>
-              </ul>
-              <ul class="list list-unstyled">
-                <li>Marketing de contenido </li>
-              </ul>
-              <ul class="list list-unstyled">
-                <li>Estratégias publicitarias</li>
-              </ul>
-              <ul class="list list-unstyled">
-                <li>SEO </li>
-              </ul>
-          </div>
-       </div>
-       <div class="col-lg-6 col-md-6 xs-mt-30 xs-mb-30">
-         <img class="img-fluid full-width" src="images/about/01.jpg" alt="">
-       </div>
+      <div class="col-12">
+      <div class="contact-3-info page-section-ptb">
+       <div class="clearfix">
+          <h6 class="text-dark">Impulsa tu proyecto</h6>
+          <h2 class="text-dark">Contact Info</h2>
+          <br>
+
+          <ul class="addresss-info list-unstyled">
+            <li><i class="ti-map-alt text-dark"></i> <p class="text-dark">Address: 17504 Carlton Cuevas Rd, Gulfport, MS, 39503</p> </li>
+            <li><i class="ti-mobile text-dark"></i><p class="text-dark">Phone: +(704) 279-1249</p></li>
+            <li><i class="ti-email text-dark"></i><p class="text-dark">Email: letstalk@webster.com</p></li>
+          </ul>
+          <div class="social-icons social-border rounded color-hover mt-50">
+                <ul>
+                  <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+                  <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                  <li class="social-vimeo"><a href="#"><i class="fa fa-instagram"></i> </a></li>
+                  <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i> </a></li>
+                  <li class="social-dribbble"><a href="#"><i class="fa fa-youtube"></i> </a></li>
+                  <li class="social-linkedin"><a href="#"><i class="fab fa-chrome"></i> </a></li>
+                </ul>
+             </div>
+            </div>
+         </div>
+      </div>
+    </div>
+  </div>
+  <div class="pos-r col-12 col-md-7 offset-1 mt-90">
+    <div class="row">
+      <div class="" id="map" data-type='black'>
+              <div class="col-12">
+              <div id="formmessage">Success/Error Message Goes Here</div>
+               <form id="contactform" role="form" method="post" action="php/contact-form.php">
+                <div class="contact-form clearfix">
+                   <div class="section-field">
+                     <input id="name" type="text" placeholder="Name*" class="form-control"  name="name">
+                 </div>
+                   <div class="section-field">
+                     <input type="email" placeholder="Email*" class="form-control" name="email">
+                  </div>
+                    <div class="section-field">
+                      <input type="text" placeholder="Phone*" class="form-control" name="phone">
+                  </div>
+                     <div class="section-field textarea">
+                       <textarea class="form-control input-message" placeholder="Comment*" rows="7" name="message"></textarea>
+                     </div>
+                   <div class="section-field submit-button">
+                     <input type="hidden" name="action" value="sendEmail"/>
+                     <button id="submit" name="submit" type="submit" value="Send" class="button button-border black"> Enviar mensaje </button>
+                   </div>
+                  </div>
+                  </form>
+                <div id="ajaxloader" style="display:none"><img class="mx-auto mt-30 mb-30 d-block" src="images/pre-loader/loader-02.svg" alt=""></div>
+             </div>
+      </div>
     </div>
   </div>
   </div>
 </section>
+
 
 <!--=================================
  footer -->
