--- a/about.html
+++ b/about.html
@@ -186,270 +186,85 @@
   </div>
 </section>
 
-<section class="gray-bg page-section-ptb">
+<section class="white-bg page-section-ptb">
   <div class="container">
-     
-    <div class="row">
-      <div class="col-lg-12 col-md-12">
-         <div class="section-title text-center">
-            <span class="h4 text-gray">Conoce a nuestros integrantes</span>
-            <h1>Nuestro equipo</h1>
+     <div class="row justify-content-center">
+       <div class="col-lg-8 text-center">
+         <h3>Realmente creemos en la tecnología como un medio para mejorar nuestras vidas en casi cualquier aspecto.</h3>
+         <p>El crecimiento es lo que nosotros también buscamos</p>
+       </div>
+     </div>
+     <div class="row mt-60  justify-content-center">
+        <div class="col-lg-2 col-md-2 col-sm-6 xs-mb-30">
+           <div class="team team-round">
+              <div class="team-photo">
+                <img class="img-fluid mx-auto" src="images/team/01.jpg" alt="">
+              </div>
+              <div class="team-description">
+                <div class="team-info">
+                     <h6><a href="team-single.html">Coke Colombres</a></h6>
+                     <span>Manager</span>
+                </div>
+               </div>
+           </div>
+          </div>
+          <div class="col-lg-2 col-md-2 col-sm-6 xs-mb-30">
+           <div class="team team-round">
+              <div class="team-photo">
+                <img class="img-fluid mx-auto" src="images/team/02.jpg" alt="">
+              </div>
+              <div class="team-description">
+                <div class="team-info">
+                     <h6><a href="team-single.html">Adrián <br> Tula</a></h6>
+                     <span>Backend Developer</span>
+                </div>
+               </div>
+           </div>
+          </div>
+          <div class="col-lg-2 col-md-2 col-sm-6 xs-mb-30">
+           <div class="team team-round">
+              <div class="team-photo">
+                <img class="img-fluid mx-auto" src="images/team/06.jpg" alt="">
+              </div>
+              <div class="team-description">
+                <div class="team-info">
+                     <h6><a href="team-single.html">Nicolás Ottaviani</a></h6>
+                     <span>Community Manager</span>
+                </div>
+               </div>
+           </div>
+          </div>
+          <div class="col-lg-2 col-md-2 col-sm-6 xs-mb-30">
+           <div class="team team-round">
+              <div class="team-photo">
+                <img class="img-fluid mx-auto" src="images/team/04.jpg" alt="">
+              </div>
+              <div class="team-description">
+                <div class="team-info">
+                     <h6><a href="team-single.html">Tomás Guerineau</a></h6>
+                     <span>Web Designer</span>
+                </div>
+               </div>
+           </div>
+          </div>
+          <div class="col-lg-2 col-md-2 col-sm-6 xs-mb-30">
+           <div class="team team-round">
+              <div class="team-photo">
+                <img class="img-fluid mx-auto" src="images/team/05.jpg" alt="">
+              </div>
+              <div class="team-description">
+                <div class="team-info">
+                     <h6><a href="team-single.html">Chueco <br> Darterio</a></h6>
+                     <span>Designer</span>
+                </div>
+               </div>
+           </div>
           </div>
        </div>
-    </div>
-     <div class="row">
-        <div class="col-lg-3 col-sm-6 sm-mb-30">
-         <div class="team team-round full-border white-bg">
-            <div class="team-photo">
-              <img class="img-fluid mx-auto" src="images/team/01.jpg" alt="">
-            </div>
-            <div class="team-description">
-              <div class="team-info">
-                   <h5><a href="team-single.html"> Coke Colombres</a></h5>
-                   <span>CEO</span>
-              </div>
-              <div class="team-contact">
-                <span class="call"> +(704) 279-1249</span>
-                <span class="email"> <a href="#"> <i class="fa fa-envelope-o"></i> </a> </span>
-              </div>
-             </div>
-         </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 sm-mb-30">
-         <div class="team team-round full-border white-bg">
-            <div class="team-photo">
-              <img class="img-fluid mx-auto" src="images/team/02.jpg" alt="">
-            </div>
-            <div class="team-description">
-              <div class="team-info">
-                   <h5><a href="team-single.html"> Nicolas Ottaviani</a></h5>
-                   <span>Design</span>
-              </div>
-              <div class="team-contact">
-                <span class="call"> +(704) 279-1249</span>
-                <span class="email"> <a href="#"> <i class="fa fa-envelope-o"></i> </a> </span>
-              </div>
-             </div>
-         </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 xs-mb-30">
-         <div class="team team-round full-border white-bg">
-            <div class="team-photo">
-              <img class="img-fluid mx-auto" src="images/team/06.jpg" alt="">
-            </div>
-            <div class="team-description">
-              <div class="team-info">
-                   <h5><a href="team-single.html"> Chueco Darterio</a></h5>
-                   <span>Community</span>
-              </div>
-              <div class="team-contact">
-                <span class="call"> +(704) 279-1249</span>
-                <span class="email"> <a href="#"> <i class="fa fa-envelope-o"></i> </a> </span>
-              </div>
-             </div>
-         </div>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-         <div class="team team-round full-border white-bg">
-            <div class="team-photo">
-              <img class="img-fluid mx-auto" src="images/team/04.jpg" alt="">
-            </div>
-            <div class="team-description">
-              <div class="team-info">
-                   <h5><a href="team-single.html"> Adrian Tula</a></h5>
-                   <span>Graphic Designer</span>
-              </div>
-              <div class="team-contact">
-                <span class="call"> +(704) 279-1249</span>
-                <span class="email"> <a href="#"> <i class="fa fa-envelope-o"></i> </a> </span>
-              </div>
-             </div>
-         </div>
-        </div>
-     </div>
   </div>
 </section>
 
-<!-- <section class="page-section-ptb">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-8">
-        <div class="section-title text-center">
-          <h5>Un poco sobre nosotros </h5>
-          <h2 class="title-effect">Nuestro equipo</h2>
-          <p>Siempre listos para nuevos proyectos!</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-6 sm-mb-30">
-         <div class="team team-list">
-            <div class="team-photo">
-              <img class="img-fluid mx-auto" src="images/team/02.png" alt="">
-            </div>
-            <div class="team-description">
-              <div class="team-info">
-                   <h5><a href="team-single.html">Coke Colombres</a></h5>
-                   <span>CEO</span>
-              </div>
-              <div class="team-contact">
-                <span class="call"> +(704) 279-1249</span>
-                <span class="email"> <i class="fa fa-envelope-o"></i> contacto@cokecolombres.com</span>
-              </div>
-              <div class="social-icons social-border rounded color-hover clearfix">
-                  <ul>
-                    <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="social-instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                </ul>
-               </div>
-            </div>
-         </div>
-      </div>
-      <div class="col-lg-6">
-         <div class="team team-list mb-0">
-            <div class="team-photo">
-              <img class="img-fluid mx-auto" src="images/team/01.png" alt="">
-            </div>
-            <div class="team-description">
-              <div class="team-info">
-                   <h5><a href="team-single.html">Nico ottaviani</a></h5>
-                   <span>Administración</span>
-              </div>
-              <div class="team-contact">
-                <span class="call"> +(704) 279-1249</span>
-                <span class="email"> <i class="fa fa-envelope-o"></i> nicoottaviani5@gmail.com</span>
-              </div>
-              <div class="social-icons social-border rounded color-hover clearfix">
-                  <ul>
-                    <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="social-instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                </ul>
-               </div>
-            </div>
-         </div>
-      </div>
-    </div>
-    <br>
-    <div class="row">
-      <div class="col-lg-6">
-         <div class="team team-list">
-            <div class="team-photo">
-              <img class="img-fluid mx-auto" src="images/team/03.png" alt="">
-            </div>
-            <div class="team-description">
-              <div class="team-info">
-                   <h5><a href="team-single.html">Chueco Darterio</a></h5>
-                   <span>Design</span>
-              </div>
-              <div class="team-contact">
-                <span class="call"> +(704) 279-1249</span>
-                <span class="email"> <i class="fa fa-envelope-o"></i> chuecodarterio@hotmail.com</span>
-              </div>
-              <div class="social-icons social-border rounded color-hover clearfix">
-                  <ul>
-                    <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="social-instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                </ul>
-               </div>
-            </div>
-         </div>
-      </div>
 
-      <div class="col-lg-6">
-         <div class="team team-list">
-            <div class="team-photo">
-              <img class="img-fluid mx-auto" src="images/team/04.png" alt="">
-            </div>
-            <div class="team-description">
-              <div class="team-info">
-                   <h4><a href="team-single.html">¿Te gustaría ser parte de nuestro equipo?</a></h4>
-                   <span>Tenemos <a href="">Oportunidades</a></span>
-              </div>
-              <div class="team-contact">
-                <span class="call"> +(704) 279-1249</span>
-                <span class="email"> <i class="fa fa-envelope-o"></i> contacto@lacompaniadigital.com</span>
-              </div>
-              <div class="social-icons social-border rounded color-hover clearfix">
-                  <ul>
-                    <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="social-instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                </ul>
-               </div>
-            </div>
-         </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-
-<!-- <section class="page-section-ptb gray-bg">
-  <div class="container">
-     <div class="row">
-     <div class="col-lg-12 col-md-12">
-         <div class="section-title text-center">
-            <h6>De nuestros lectores </h6>
-            <h2 class="title-effect">Reseñas y comentarios</h2>
-          </div>
-       </div>
-    </div>
-    <div class="row">
-    <div class="col-lg-12 col-md-12">
-        <div class="owl-carousel" data-nav-dots="true" data-items="2" data-md-items="2" data-sm-items="2" data-xs-items="1" data-xx-items="1">
-        <div class="item">
-           <div class="testimonial light">
-              <div class="testimonial-avatar"> <img alt="" src="images/team/03.jpg"> </div>
-                <div class="testimonial-info">
-                  Muy buena plataforma y contenido compartido. Grandes avances! Siempre apoyandolos
-                </div>
-              <div class="author-info"> <strong>Social Fancy - <span>CEO</span></strong> </div>
-            </div>
-        </div>
-        <div class="item">
-           <div class="testimonial light">
-              <div class="testimonial-avatar"> <img alt="" src="images/team/03.jpg"> </div>
-                <div class="testimonial-info">
-                  Tremenda la página, lo mejor en español.
-                </div>
-              <div class="author-info"> <strong>El Complejo - <span>Ricardo Dominguez</span></strong> </div>
-            </div>
-        </div>
-        <div class="item">
-           <div class="testimonial light">
-              <div class="testimonial-avatar"> <img alt="" src="images/team/03.jpg"> </div>
-                <div class="testimonial-info">
-                  Genial. Aprovecho sus videos para compartir en nuestro equipo e implementar los que nos enseñan. Muchas gracias!
-                </div>
-              <div class="author-info"> <strong>Don Octavio - <span>Raúl Montivero</span></strong> </div>
-            </div>
-        </div>
-        <div class="item">
-           <div class="testimonial light">
-              <div class="testimonial-avatar"> <img alt="" src="images/team/03.jpg"> </div>
-                <div class="testimonial-info">
-                  Genial. Aprovecho sus videos para compartir en nuestro equipo e implementar los que nos enseñan. Muchas gracias!
-                </div>
-              <div class="author-info"> <strong> coke - <span>Coke Colombres</span></strong> </div>
-            </div>
-        </div>
-     </div>
-    </div>
-   </div>
- </div>
-</section> -->
-
-
-
-
-<!--=================================
- footer -->
 
 <footer class="footer page-section-pt black-bg">
  <div class="container">
