--- a/service-design.html
+++ b/service-design.html
@@ -149,8 +149,8 @@
   </div>
 </section>
 
-<section class="clearfix">
-  <div class="page-section-ptb parallax bg-overlay-black-90 pb-150" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/programing.jpg);">
+<section class="clearfix bg-dark">
+  <div class="page-section-ptb parallax bg-overlay-black-20 pb-100" data-jarallax='{"speed": 0.6}'>
     <div class="container">
       <div class="row">
         <div class="col-6">
