--- a/about.html
+++ b/about.html
@@ -499,7 +499,7 @@
        </div>
   </div>
 </section>
-
+ -->
 
 
 <footer class="footer page-section-pt black-bg">
@@ -527,7 +527,7 @@
           <li><a href="about.html">Servicios</a></li>
           <li><a href="about.html">Nosotros</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <!-- <li><a href="#">Oportunidades</a></li> -->
+          <!-- <li><a href="#">Oportunidades</a></li>
         </ul>
       </div>
     </div>
