--- a/service-web.html
+++ b/service-web.html
@@ -501,14 +501,16 @@
         <img id="logo-footer" class="mb-20" src="images/logo-06.png" alt="">
       </div>
       <p class="pb-10">Noticias, opiniones y consejos sobre los medios digitales y su uso</p>
-      <div class="social-icons social-border rounded color-hover clearfix"><ul>
-        <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-        <li class="social-youtube"><a href="#"><i class="fa fa-youtube"></i></a></li>
-        <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li class="social-instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
-        <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li class="social-skype"><a href="#"><i class="fa fa-skype"></i></a></li>
-      </ul></div>
+      <div class="social-icons social-border rounded color-hover clearfix">
+        <ul>
+          <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          <li class="social-youtube"><a href="#"><i class="fa fa-youtube"></i></a></li>
+          <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li class="social-instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
+          <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li class="social-skype"><a href="#"><i class="fa fa-skype"></i></a></li>
+        </ul>
+      </div>
     </div>
     <div class="col-lg-2 col-md-3 col-sm-6 sm-mb-30">
       <div class="footer-useful-link footer-hedding">
