--- a/service-web.html
+++ b/service-web.html
@@ -680,15 +680,22 @@
   <div class="page-section-ptb parallax bg-overlay-black-70 pb-150" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/programing.jpg);">
     <div class="container">
       <div class="row">
-       <div class="col-lg-8">
-        <div class="section-title">
-          <h2 class="text-white">Sobre nosotros <i class="theme-color"> Que somos</i></h2>
-        </div>
-        <p class="text-white">One of the main areas that I work on with my clients is shedding these non-supportive beliefs and replacing them with beliefs that will help them to accomplish their desires. So why do we do it? <span class="theme-color"> For the most </span> part, we don’t do it intentionally or with malice.</p>
-        <p class="text-white">It is truly amazing the damage that we, as parents, can inflict on our children. </p>
-        <a class="button nt-20" href="#">Explore More</a>
+         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
+              <h1 class="text-white">01<span class="text-black">.</span></h1>
+              <h3 class="text-lcd">Tenemos tecnología</h3>
+              <p class="text-white">Realmente creemos en la tecnología como un medio para mejorar nuestras vidas en casi cualquier aspecto. </p>
+         </div>
+         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
+              <h1 class="text-white">02<span class="text-black">.</span></h1>
+              <h3 class="text-lcd">Estamos en compañía</h3>
+              <p class="text-white">Conectados casi todo el tiempo no debemos olvidar elegir bien nuestra compañía por que siempre influye en nosotros.</p>
+         </div>
+         <div class="col-lg-4 col-md-4 col-sm-4">
+              <h1 class="text-white">03<span class="text-black">.</span></h1>
+              <h3 class="text-lcd">Mejoramos día a día</h3>
+              <p class="text-white">Estamos siempre atentos a los comentarios, opiniones y sugerencias de nuestras visitas, nos impulsan cada día.</p>
+         </div>
       </div>
-     </div>
      </div>
     </div>
     <div class="page-section-pb">
