--- a/service-web.html
+++ b/service-web.html
@@ -702,40 +702,40 @@
       <div class="container">
        <div class="business-feature-top">
         <div class="row">
-           <div class="col-md-4 col-sm-4 border-right">
-             <div class="feature-text p-4">
-             <div class="feature-icon">
-              <span class="ti-desktop theme-color"></span>
-              </div>
-              <div class="feature-info">
-                  <h5>Perfect design</h5>
-                   <p>It's always nice to browse some nice and   <span class="theme-color" data-toggle="tooltip" data-placement="top" title="" data-original-title="Won 10+ Awards">clean websites.</span> It is a good way to get inspiration.</p>
-               </div>
-           </div>
-          </div>
-          <div class="col-md-4 col-sm-4 border-right">
-             <div class="feature-text p-4">
-             <div class="feature-icon">
-              <span class="ti-headphone theme-color"></span>
-              </div>
-              <div class="feature-info">
-                <h5>Fast Customer support</h5>
-                 <p>Our Support Team will do its best to provide the best helpful answer for the issues.</p>
-               </div>
-           </div>
-          </div>
-           <div class="col-md-4 col-sm-4">
-             <div class="feature-text p-4">
-             <div class="feature-icon">
-              <span class="ti-shield theme-color"></span>
-              </div>
-              <div class="feature-info">
-                  <h5>Powerful Performance</h5>
-                   <p>High performance, super fast with top page speed &amp; yslow ratings </p>
-              </div>
-           </div>
+          <div class="col-lg-4 col-md-4 sm-mb-30">
+          <div class="feature-text round shadow">
+              <div class="feature-icon">
+              <span class="fa fa-globe"></span>
+            </div>
+            <div class="feature-info">
+              <h4 class="mb-15">Innovación</h4>
+              <p>Estamos a la vanguardia con las últimas tendencias en tecnología. </p>
+            </div>
           </div>
          </div>
+         <div class="col-lg-4 col-md-4 sm-mb-30">
+          <div class="feature-text round shadow">
+             <div class="feature-icon">
+              <span class="fa fa-cogs"></span>
+            </div>
+            <div class="feature-info">
+              <h4 class="mb-15">Creatividad</h4>
+              <p>Diferenciamos tu proyecto con creatividad llevándolo a otro nivel.</p>
+            </div>
+          </div>
+         </div>
+          <div class="col-lg-4 col-md-4">
+           <div class="feature-text round shadow">
+               <div class="feature-icon">
+                <span class="fa fa-map-marker"></span>
+              </div>
+              <div class="feature-info">
+                <h4 class="mb-15">Efectividad</h4>
+                <p>Enfocados en tu público objetivo, resultados e identidad de marca.</p>
+              </div>
+           </div>
+          </div>
+        </div>
        </div>
      </div>
     </div>
