--- a/service-web.html
+++ b/service-web.html
@@ -676,6 +676,48 @@
     </div> 
 </section>
 
+<section class="our-clients bg-dark text-white page-section-ptb">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+         <div class="section-title text-center">
+            <h1>Tecnologías con las que trabajamos</h1>
+          </div>
+       </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+      <div class="owl-carousel" data-items="5" data-sm-items="4" data-xs-items="3" data-xx-items="2">
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/icons/bootstrap.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/icons/css3.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/08.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/09.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/10.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/06.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/08.png" alt="">
+         </div>
+         <div class="item">
+           <img class="mx-auto img-fluid" src="images/clients/light/09.png" alt="">
+         </div>
+         </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="clearfix">
   <div class="page-section-ptb parallax bg-overlay-black-70 pb-150" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/programing.jpg);">
     <div class="container">
@@ -739,55 +781,6 @@
        </div>
      </div>
     </div>
-</section>
-
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 col-md-12">
-         <div class="section-title text-center">
-            <span class="h4 text-gray">Algo de lo que hicimos</span>
-            <h1>Algunas webs desarrolladas</h1>
-          </div>
-       </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12 col-md-12">
-          <div class="owl-carousel" data-nav-dots="true" data-items="6" data-md-items="6" data-sm-items="4" data-xs-items="3" data-xx-items="1" data-space="20" data-autospeed="5000" data-autospeed="50">
-            <div class="item">
-              <img class="img-fluid" src="images/icons/bootstrap.png" alt="">
-            </div>
-             <div class="item">
-              <img class="img-fluid" src="images/icons/css3.png" alt="">
-            </div>
-             <div class="item">
-              <img class="img-fluid" src="images/icons/html5.png" alt="">
-            </div>
-             <div class="item">
-              <img class="img-fluid" src="images/icons/php7.png" alt="">
-            </div>
-             <div class="item">
-              <img class="img-fluid" src="images/icons/js.png" alt="">
-            </div>
-             <div class="item">
-              <img class="img-fluid" src="images/icons/vuejs.png" alt="">
-            </div>
-             <div class="item">
-              <img class="img-fluid" src="images/icons/jquery.png" alt="">
-            </div>
-            <div class="item">
-              <img class="img-fluid" src="images/icons/animatecss.png" alt="">
-            </div>
-            <div class="item">
-              <img class="img-fluid" src="images/icons/git.png" alt="">
-            </div>
-            <div class="item">
-              <img class="img-fluid" src="images/icons/laravel.png" alt="">
-            </div>
-         </div>
-      </div>
-  </div>
-  </div>
 </section>
 
 <section class=" contact-2 clearfix o-hidden">
